<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_myorders">My Orders</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_terms">Terms</string>
    <string name="menu_privacy_policy">Privacy Policy</string>


    <string name="action_cerrar_sesion">Cerrar Sesion</string>
    <string name="action_search">Buscar</string>
    <string name="action_carro">Buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>