<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/order"
            android:title="@string/menu_myorders" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offers"
            android:title="@string/menu_offers" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notificacion"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/terms"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/policy"
            android:title="@string/menu_privacy_policy" />
    </group>
</menu>